--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ PySide6 = "^6.0.1"
 english-words = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
+pyinstaller = "^4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
